--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "python-package-manager",
   "displayName": "Python Package Manager",
   "description": "Manage and identify unused python packages",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "engines": {
     "vscode": "^1.90.0"
   },
   "categories": [
     "Other"
   ],
-  "activationEvents": [
-  ],
+  "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
