--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,11 +1,7 @@
-.vscode/**
-.vscode-test/**
-src/**
-.gitignore
-.yarnrc
-vsc-extension-quickstart.md
-**/tsconfig.json
-**/.eslintrc.json
-**/*.map
-**/*.ts
-**/.vscode-test.*
+out/test
+node_modules
+.vscode
+.vscode-test
+*.map
+*.ts
+
