--- a/package.json
+++ b/package.json
@@ -26,18 +26,14 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
-    "lint": "eslint src --ext ts",
-    "test": "vscode-test"
+    "compile": "tsc -p ./ && npm run copy-python",
+    "copy-python": "cpx src/check_packages.py out/"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/akeemmckenzie/python-package-manager.git"
   },
   "files": [
-    "src/**/*",
     "out/**/*",
     "images/**/*",
     "CHANGELOG.md",
@@ -49,14 +45,17 @@
   "publisher": "AkeemMcKenzie",
   "license": "Proprietary",
   "devDependencies": {
-    "@types/vscode": "^1.90.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
+    "@types/vscode": "^1.90.0",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.5",
     "@vscode/test-cli": "^0.0.9",
-    "@vscode/test-electron": "^2.4.0"
+    "@vscode/test-electron": "^2.4.0",
+    "eslint": "^8.57.0",
+    "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "cpx": "^1.5.0"
   }
 }
